Messages and style

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,6 +27,14 @@ footer {
     background-color: #ffffff;
     padding: 1% 0;
   }
+
+  h1 {
+    font-size: 2em;
+  }
+
+  body, button {
+    font-size: 1em;
+  }
 }
 
 /* Tablet */
@@ -38,6 +46,14 @@ footer {
     background-color: #ffffff;
     padding: 1% 0;
   }
+
+  h1 {
+    font-size: 1.5em;
+  }
+
+  body, button {
+    font-size: 0.9em;
+  }
 }
 
 /* Mobile */
@@ -48,6 +64,14 @@ footer {
     width: 95%;
     background-color: #ffffff;
     padding: 1% 0;
+  }
+
+  h1 {
+    font-size: 1.25em;
+  }
+
+  body, button {
+    font-size: 0.8em;
   }
 }
 
@@ -84,7 +108,6 @@ button {
   border-radius: 4px;
   width: 100%;
   font-weight: 700;
-  font-size: 1em;
 }
 
 button:hover {
@@ -96,6 +119,23 @@ h1 {
   margin: 0;
 }
 
+#delete-message {
+  width: 95%;
+  margin: auto;
+  font-weight: 700;
+}
+
 th {
   text-align: left;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
 }
